<resources>
    <string name="app_name">Homeland</string>
    <string name="title_activity_main_action">Main_action</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="credits">О приложении</string>
    <string name="exit">Выход</string>
    <string name="settings">Настройки</string>
    <string name="load">Загрузить</string>
    <string name="create_new_one">Создать новую</string>
    <string name="title_activity_game_load">GameLoad</string>
    <string name="setting_music">Музыка</string>
    <string name="exit_to_main_menu">Выход в главное меню</string>
    <string name="settlement_world">Поселение\n———\nМир</string>
    <string name="go_to_west_MAP">Пойти на\nзапад</string>
    <string name="go_to_east_MAP">Пойти на\nвосток</string>
    <string name="go_to_north_MAP">Пойти на\nсевер</string>
    <string name="go_to_south_MAP">Пойти на\nюг</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dot">.</string>
    <string name="characteristics">Характеристики</string>
    <string name="strength">Сила</string>
    <string name="physique">Телосложение</string>
    <string name="mentality">Ум</string>
    <string name="luckiness">Удачливость</string>
    <string name="watchfulness">Наблюдательность</string>
    <string name="attractiveness">Привлекательность</string>
    <string name="skills">Навыки</string>
    <string name="lightWeapons">Лёгкое оружие</string>
    <string name="heavyWeapons">Тяжёлое оружие</string>
    <string name="meleeWeapons">Оружие ближнего боя</string>
    <string name="communication">Общение</string>
    <string name="trading">Торговля</string>
    <string name="survival">Выживание</string>
    <string name="medicine">Медицина</string>
    <string name="scince">Наука</string>
    <string name="repair">Ремонт</string>
    <string name="combat">Боевые:</string>
    <string name="social">Социальные:</string>
    <string name="survivaling">Выживания:</string>
    <string name="intellectual">Интеллектуальные:</string>
    <string name="abilities">Способности</string>
    <string name="talents">Таланты</string>
    <string name="ending_form">Завершить\nанкету</string>
    <string name="back_to_skills">Назад</string>
    <string name="back_to_characteristics">Назад</string>
    <string name="next_to_the_talents">Далее</string>
    <string name="main_information">Основная информация</string>
    <string name="dexterity">Сноровка</string>
    <string name="next_to_skills">Далее</string>
    <string name="ur_name">Ваше имя:</string>
    <string name="input_name">Введите Ваше имя</string>
    <string name="input_height">Введите Ваш рост</string>
    <string name="did_not_input_ur_name">Вы не заполнили Ваше имя...</string>
    <string name="did_not_input_ur_age">Вы не заполнили свой возраст...</string>
    <string name="ur_too_old">Вы слишком *взрослый(-ая)*...</string>
    <string name="ur_not_enough_old">Вы слишком *молодой(-ая)*...</string>
    <string name="ur_sooo_old">Вы чрезмерно *взрослый(-ая)*...</string>
    <string name="did_not_input_ur_height">Вы не указали свой рост...</string>
    <string name="ur_too_tall">Ваш рост слишком большой...</string>
    <string name="ur_too_short">Ваш рост слишком маленький...</string>
    <string name="ur_sooo_tall">Ваш рост чрезмерно большой...</string>
    <string name="ur_height">Ваш рост (160 – 190 см):</string>
    <string name="ur_age">Ваш возраст (от 16 до 35):</string>
    <string name="input_age">Введите Ваш возраст</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="next_to_characteristics">Далее</string>
    <string name="downgrade">-</string>
    <string name="raise">+</string>
    <string name="back_to_main_information">Назад</string>
    <string name="ur_gender">Ваш пол:</string>
    <string name="choose_as_main_skill">Выбрать как основной навык</string>
    <string name="choose_as_not_main_skill">Выбрать как неосновной навык</string>
    <string name="homeland">Homeland</string>
    <string name="rest_of_talents_points">Осталось очков талантов:</string>
    <string name="talent_is_not_used">Талант не полностью раскрыт...</string>
    <string name="have_not_chosen_talent">Не выбран талант...</string>
    <string name="have_not_chosen_ur_talents">Вы не выбрали свои таланты...</string>
    <string name="not_enough_talents_points">Не хватает очков навыков...</string>
    <string name="singer">Певец</string>
    <string name="bull">Бугай</string>
    <string name="strong_kick">Сильный удар</string>
    <string name="experienced">Опытный</string>
    <string name="trained">Натренированный</string>
    <string name="heavyweight">Тяжеловес</string>
    <string name="kind_one">Добрый малый</string>
    <string name="choose_talent">Выбрать талант</string>
    <string name="unchoose_talent">Убрать талант</string>
    <string name="signature">Подпись:</string>
    <string name="health_points">Очки здоровья</string>
    <string name="critical_damage">Критический урон</string>
    <string name="melee_damage">Урон оружия ближнего боя</string>
    <string name="max_carry_volume">Максимальный переносимый объём</string>
    <string name="max_carry_weight">Максимальный переносимый вес</string>
    <string name="ap">Очки действия</string>
    <string name="continue_game">Продолжить</string>
    <string name="person">Person</string>
    <string name="quests">Задания</string>
    <string name="inventory">Инвентарь</string>
    <string name="health_status_and_other_information">Состояние здоровья и прочая информация</string>
    <string name="minusbutton">minusButton</string>
    <string name="plusbutton">plusButton</string>
    <string name="ready">Готово</string>
    <string name="melee_weapon_with_n">Оружие ближнего боя</string>
    <string name="heavy_weapon_withn">Тяжёлое оружие</string>
    <string name="light_weapon_withn">Лёгкое оружие</string>
    <string name="pockets">Карманы</string>
    <string name="backpack">Рюкзак</string>
    <string name="back_to_game">Вернуться в игру</string>
    <string name="back_to_main_menu">В главное меню</string>
    <string name="exit_game">Выйти из игры</string>
    <string name="you8">*Вы*</string>
    <string name="notes8">*Заметки*</string>
    <string name="you_already_here">Вы уже здесь...</string>
    <string name="you">Вы</string>
    <string name="notes">Заметки</string>
    <string name="menu">Меню</string>
    <string name="name_registrator">Регистратор</string>
    <string name="names_MT"> </string>
    <string name="instructor_serdcev">Инструктор Сердцев</string>
    <string name="u_cant_go_while_not_spend_all_characteristics_points">Вы не можете перейти на другую страницу, не распределив все очки характеристик...</string>
    <string name="max_value_of_characteristic">Слишком большое значение характеристики...</string>
    <string name="not_enough_characteristics_points">Не хватет очков характеристик...</string>
    <string name="min_value_of_characteristic">Слишком маленькое значение характеристики...</string>
    <string name="have_not_chosen_characteristic">Не выбрана характеристика...</string>
    <string name="rest_of_characteristics_points">Осталось очков характеристик:</string>
    <string name="strength_description">Характеристика, показывающая Вашу мощь.\nОт неё зависят переносимый Вами вес и мощность Вашего удара.</string>
    <string name="physique_description">Худой Вы или полный, широкий или узкий - это представляет данная характеристика.\nОт него зависят переносимый Вами объём, Ваша живучесть и защищённость.</string>
    <string name="dexterity_description">Эта характеристика, являющаяся общим показателем Вашей гибкости, поворотливости, ловкости.\nОт неё зависят Ваши очки действия и вероятность уклонения.</string>
    <string name="mentality_description">Ваше интеллектуальное развитие является данной характеристикой.\nОт него зависят получаемый Вами опыт и получаемое количество очков навыков.</string>
    <string name="luckiness_description">Определяет шанс выигрыша в лотерее.\nОт неё зависят шанс критического удара и шанс попадания в целом.</string>
    <string name="watchfulness_description">Эта характеристика показывает, увидите ли Вы иглу в стоге сена.\nОт неё зависят Ваша точность при стрельбе.</string>
    <string name="attractiveness_description">Представляет собой, захотят ли люди пойти за Вами или быть с Вами.\nОт неё зависят цена при торговле и реакция других на Ваши слова.</string>
    <string name="light_weapons_description">Отображает Ваше умение пользоваться лёгким оружием.</string>
    <string name="heavy_weapons_description">Ваше умение управления на самом деле нелёгких орудий.</string>
    <string name="melee_weapons_description">Ближний бой с оружием и без, что говорит о Вашем умении использовать Ваши руки и ноги не только в мирных целях.</string>
    <string name="communication_description">Отображает Ваше мастерство в ораторском искусстве: убеждении других.</string>
    <string name="trading_description">Исскуство сделать для себя сделку, покупку, продажу, бартер выгоднее.</string>
    <string name="survival_description">Практические знания правил жизни в космосе и на других планетах, сложившиеся из теоретических.</string>
    <string name="medicine_description">Общие и углублённые знания лечения.</string>
    <string name="light_weapons_base_value">Базовое значение: Наблюдательность × 2 + Удачливость + Телосложение + 10.</string>
    <string name="heavy_weapons_base_value">Базовое значение: Сила × 2 + Наблюдательность + Удачливость + 10.</string>
    <string name="melee_weapons_base_value">Базовое значение: Наблюдательность + Удачливость + Телосложение + Сила × 2 + 10.</string>
    <string name="communication_base_value">Базовое значение: Привлекательность × 3 + Удачливость + Ум + 10.</string>
    <string name="trading_base_value">Базовое значение: Привлекательность × 3 + Наблюдательность + 10.</string>
    <string name="survival_base_value">Базовое значение: Телосложение × 2 + Сноровка + Ум + 10.</string>
    <string name="medicine_base_value">Базовое значение: Ум × 2 + Наблюдательность + 10.</string>
    <string name="science_base_value">Базовое значение: Ум × 2 + Наблюдательность + 10.</string>
    <string name="repair_base_value">Базовое значение: Ум × 2 + Наблюдательность + Сноровка + 10.</string>
    <string name="science_description">Сочетание из многих наук: математики, физики, химии, биологии и многих других.</string>
    <string name="repair_description">Часть науки не с теоретической части.</string>
    <string name="rest_of_main_skills_points">Осталось очков навыков:</string>
    <string name="not_enough_main_skills_points">Не хватает очков навыков...</string>
    <string name="maximum_value_skill">Максимальное значение навыка...</string>
    <string name="not_enough_skill_points">Не хватает очков навыков...</string>
    <string name="minimum_value_skill">Минимальное значение навыка...</string>
    <string name="changes_saved">Изменения сохранены...</string>
    <string name="did_not_choosen_starting_skill">Не выбран навык...</string>
    <string name="have_not_used_all_main_skills_points_yet">Вы ещё не определили все основные навыки...</string>
    <string name="description_singer">У Вас от природы красивейший голос, за счёт чего Вы становитесь более привлекательными для окружающих.</string>
    <string name="description_bull">Как-то так сложилось, что Вы здорово выросли в детстве, так ещё и накачались...</string>
    <string name="description_strong_kick">Бедная подушка, зато есть набитый удар.</string>
    <string name="description_experienced">Вы уже прошли немало испытаний по жизни, что сильно отразилось на Ваших возможностях.</string>
</resources>