<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/characteristic"
        android:icon="@drawable/character"
        android:title="@string/characteristics" />
    <item
        android:id="@+id/skills"
        android:icon="@drawable/skills"
        android:title="@string/skills" />
    <item
        android:id="@+id/capabilities"
        android:icon="@drawable/capabilities"
        android:title="@string/abilities" />
    <item
        android:id="@+id/items"
        android:icon="@drawable/backpack"
        android:title="@string/inventory" />
    <item
        android:id="@+id/healthStatus_Others"
        android:icon="@drawable/health_status"
        android:title="@string/health_status_and_other_information" />
</menu>