<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cosmos"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".TopPanel.Menu.MenuActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/back_to_game"
        android:textColor="@color/golden_yellow"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/settings"
        android:textColor="@color/golden_yellow"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/back_to_main_menu"
        android:textColor="@color/golden_yellow"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exitGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/exit_game"
        android:textColor="@color/golden_yellow"
        android:textSize="24sp" />

</LinearLayout>