<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cosmos"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/homeland"
        android:textColor="#EFDB3D"
        android:layout_margin="12dp"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textSize="48sp" />

    <Button
        android:id="@+id/create_new_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:backgroundTint="#3A04B5"
        android:text="@string/create_new_one"
        android:textAllCaps="false"
        android:textColor="#EFDB3D"
        android:textSize="26sp" />

    <Button
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:backgroundTint="#3A04B5"
        android:text="@string/load"
        android:textAllCaps="false"
        android:textColor="#EFDB3D"
        android:textSize="26sp" />

    <Button
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:backgroundTint="#3A04B5"
        android:text="@string/credits"
        android:textAllCaps="false"
        android:textColor="#EFDB3D"
        android:textSize="26sp" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:backgroundTint="#3A04B5"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="#EFDB3D"
        android:textSize="26sp" />

    <Button
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:backgroundTint="#3A04B5"
        android:text="map"
        android:textAllCaps="false"
        android:textColor="#EFDB3D"
        android:textSize="26sp" />


</LinearLayout>