<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".StartingFragments.StartingTalentsFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="@string/talents"
        android:textColor="#474747"
        android:textSize="36sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/black_small_rectangle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/singer"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/singer"
                android:textAllCaps="false"
                android:textColor="#474747"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bull"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bull"
                android:textAllCaps="false"
                android:textColor="#474747"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/strongKick"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strong_kikc"
                android:textAllCaps="false"
                android:textColor="#474747"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/experienced"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/experienced"
                android:textAllCaps="false"
                android:textColor="#474747"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/trained"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trained"
                android:textAllCaps="false"
                android:textColor="#474747"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/heavyweight"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heavyweight"
                android:textAllCaps="false"
                android:textColor="#474747"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/kindOne"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kind_one"
                android:textAllCaps="false"
                android:textColor="#474747"
                android:textSize="24sp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2sp"
        android:layout_weight="1"
        android:background="@drawable/black_small_rectangle"
        android:orientation="vertical">

        <TextView
            android:id="@+id/talentName"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#474747"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/meaning"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#474747"
            android:textSize="20sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/shortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#474747"
                android:textSize="24sp" />
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/chooseTalent"
        android:layout_weight="1.47"
        android:text="@string/choose_talent"
        android:textAllCaps="false"
        android:textColor="#474747"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonToSkills"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/back_to_skills"
            android:textAllCaps="false"
            android:textColor="#474747"
            android:textSize="16sp"
            tools:ignore="ContentDescription" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonToEndForm"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/ending_form"
            android:textAllCaps="false"
            android:textColor="#474747"
            android:textSize="16sp"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</LinearLayout>